# serializer version: 1
# name: TestOTPSend.test_gadget_does_not_exist
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'gadget': list([
        'nonexistent@example.com',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestOTPSend.test_identifier_cooldown
  dict({
    'code': 'api.too_many_requests',
    'errors': dict({
      'retry_after': list([
        60,
      ]),
    }),
    'message': 'Too many requests. Please try again in 1 minute',
    'success': False,
  })
# ---
# name: TestOTPSend.test_identifier_cooldown_normalized_identifier
  dict({
    'code': 'api.too_many_requests',
    'errors': dict({
      'retry_after': list([
        60,
      ]),
    }),
    'message': 'Too many requests. Please try again in 1 minute',
    'success': False,
  })
# ---
# name: TestOTPSend.test_identifier_hourly_limit
  dict({
    'code': 'api.too_many_requests',
    'errors': dict({
      'retry_after': list([
        3295,
      ]),
    }),
    'message': 'Too many requests. Please try again in 55 minutes',
    'success': False,
  })
# ---
# name: TestOTPSend.test_success[email]
  dict({
    'message': 'Verification code sent',
    'success': True,
  })
# ---
# name: TestOTPSend.test_success[phone]
  dict({
    'message': 'Verification code sent',
    'success': True,
  })
# ---
# name: TestOTPSend.test_throttling
  dict({
    'code': 'drf.throttled',
    'message': 'Request was throttled. Expected available in 60 seconds.',
    'success': False,
  })
# ---
